وصف مختصر للتغييرات

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,22 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:NGecsFU12cJsOnCHFAZya2VSK4Cx6cLA3Aw4QHWwpAk=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
+FILESYSTEM_DRIVER=local
+
+# 👇 مهم لـ Sanctum — السماح بإرسال الكوكيز من React على هذه البورتات
+SANCTUM_STATEFUL_DOMAINS=localhost:3000,localhost:5173,127.0.0.1:3000,127.0.0.1:5173
+
+# 👇 مهم لـ جلسات Laravel — يجب أن يكون نفس الدومين لكن بدون بورت
+SESSION_DOMAIN=localhost
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
 
 PHP_CLI_SERVER_WORKERS=4
 
@@ -20,25 +27,26 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel_shop
+DB_USERNAME=root
+DB_PASSWORD=
 
+# 👇 تأكد من تفعيل الجلسات بشكل سليم
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
-SESSION_DOMAIN=null
+# 👇 لا تتركها null، خَلّيها نفس SESSION_DOMAIN
+SESSION_DOMAIN=localhost
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
-# CACHE_PREFIX=
 
 MEMCACHED_HOST=127.0.0.1
 
@@ -62,4 +70,5 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
+# 👇 لو تستخدم Vite مع Laravel
 VITE_APP_NAME="${APP_NAME}"
